[gd_scene load_steps=7 format=3 uid="uid://ttldymngx120"]

[ext_resource type="Script" path="res://Scenes/Core/DeadScene/DeadScene.gd" id="1_k3g8h"]
[ext_resource type="FontFile" uid="uid://dr4swt6hi0q6c" path="res://Scenes/arte/Kenney Pixel.ttf" id="1_vblhg"]
[ext_resource type="AudioStream" uid="uid://khp5riynqewp" path="res://Assets/Sounds/back_menu.mp3" id="3_7lau2"]
[ext_resource type="AudioStream" uid="uid://dplj6dl3u0vd8" path="res://Assets/Sounds/DeathScreen.mp3" id="4_gpecn"]

[sub_resource type="LabelSettings" id="LabelSettings_g866k"]
font = ExtResource("1_vblhg")
font_size = 250
font_color = Color(0.85098, 0.0313726, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_720ot"]
font = ExtResource("1_vblhg")
font_size = 64

[node name="DeadScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k3g8h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Jugar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -311.5
offset_top = -100.0
offset_right = 311.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_vblhg")
theme_override_font_sizes/font_size = 80
text = "Volver al menu Principal"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -329.0
offset_top = -108.0
offset_right = 329.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "YOU DIED"
label_settings = SubResource("LabelSettings_g866k")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "osea que te moriste"
label_settings = SubResource("LabelSettings_720ot")

[node name="regresar_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7lau2")

[node name="DeathScreen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gpecn")
autoplay = true

[connection signal="pressed" from="Jugar" to="." method="_on_jugar_pressed"]
